--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,11 @@ environment:
   sdk: '>=2.19.3 <3.0.0'
 
 dependencies:
+  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-
-  cupertino_icons: ^1.0.2
+  flutter_dotenv: ^5.0.2
+  supabase_flutter: ^1.4.1
 
 dev_dependencies:
   flutter_test:
@@ -21,3 +22,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+  - .env
